# wiki-rag-bedrock

./: LICENSE  README.md
api/: pyproject.toml
api/src/api/: config.py  db.py  llm.py  main.py  retrieval.py
indexer/src/indexer/: embeddings.py  loader.py  main.py  nodes.py  settings.py  vectorstore.py
indexer/src/indexer/providers/: embeddings.py
ingest/: Dockerfile
scripts/: cleanup_ecr.sh  cleanup_s3_versioned.sh  deploy_ingest.sh
terraform/: ecs.tf  github_oidc.tf  iam.tf  locals.tf  outputs.tf  rds.tf  variables.tf  versions.tf
